[tool.poetry]
name = "lindi-dandi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pyright = "1.1.335"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
